@@ -1,8 +1,6 @@
 package Types::SQL;
 
-use v5.10;
-
-use strict;
+use v5.14;
 use warnings;
 
 use Type::Library
@@ -281,6 +279,17 @@ The method should return a hash of values that are passed to the
 C<add_column> method of L<DBIx::Class::ResultSource>.
 
 =for readme continue
+
+=head1 SUPPORT FOR OLDER PERL VERSIONS
+
+Since v0.7.0, the this module requires Perl v5.14 or later.
+
+Future releases may only support Perl versions released in the last ten years.
+
+If you need this module on Perl v5.10, please use one of the v0.6.x
+versions of this module.  Significant bug or security fixes may be
+backported to those versions.
+
 =head1 SEE ALSO
 
 L<Type::Tiny>.
