@@ -1,6 +1,11 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Incompatible Changes]
+  - Upgraded the minimum Perl version to v5.14.
+
+  [Documentation]
+  - Documented support policy for older Perls.
 
 v0.6.1    2022-09-04 15:58:06+01:00 Europe/London
   [Other]
